# Xitils

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  Sandbox-memo.md  Xitils.sln
CMake/: FindOptiX.cmake
Documents/: Xitils.md
Include/Xitils/: AccelerationStructure.h  App.h  Bounds.h  Camera.h  Geometry.h  Image.h  ImageTile.h  Interaction.h  Intersection.h  Material.h  Matrix.h  Object.h  PathTracer.h  Primitive.h  Ray.h  RenderTarget.h  Sampler.h  Scene.h  Shape.h  SkySphere.h  SphericalHarmonics.h  Table.h  Texture.h  Transform.h  TriangleIndexed.h  TriangleMesh.h  Utils.h  Vector.h  VonMisesFisherDistribution.h
Include/stb/: stb_image.h
Sandbox/: CMakeCommon.txt  CMakeLists.txt
Sandbox/01/: 01.cpp  01.vcxproj  01.vcxproj.filters  CMakeLists.txt
Sandbox/02/: 02.cpp  02.vcxproj  CMakeLists.txt
Sandbox/03/: 03.cpp  03.vcxproj  CMakeLists.txt
Sandbox/04/: 04.cpp  04.vcxproj  CMakeLists.txt
Sandbox/05/: 05.cpp  CMakeLists.txt  Common.h
Sandbox/Data/: RT8.blend
Sandbox/Microfacet-basedNormalMapping/: CMakeLists.txt  Main.cpp
Sandbox/MicrofacetBasedNormalMapping/: CMakeLists.txt  Main.cpp
Sandbox/PrefilteringForRenderingDisplacement-MappedSurfaces/: CMakeLists.txt  Main.cpp
Sandbox/PrefilteringForRenderingDisplacementMappedSurfaces/: CMakeLists.txt  Main.cpp
Sandbox/RTCamp8/: CMakeLists.txt  Main.cpp
Sandbox/RaycasterBVH/: CMakeLists.txt  Main.cpp
Sandbox/RaycasterBVH2/: CMakeLists.txt  Main.cpp
Sandbox/RaycasterEmbree/: CMakeLists.txt  Main.cpp
Sandbox/RaycasterNaive/: CMakeLists.txt  Main.cpp
Sandbox/RaycasterOptix/: Main.cpp
Sandbox/SimplePathTracer/: CMakeLists.txt  Main.cpp
Sandbox/SimplePathTracerWithDenoiser/: CMakeLists.txt  Main.cpp
Sandbox/SimpleWindow/: CMakeLists.txt  Main.cpp
Sandbox/SphericalHarmonics/: CMakeLists.txt  Main.cpp
Sandbox/VisualizeError/: CMakeLists.txt  Main.cpp
Sandbox/VonMisesFisherDistribution/: CMakeLists.txt  Main.cpp
Sandbox/_Experimental/RaycasterEmbree/: CMakeLists.txt  Main.cpp
Sandbox/_Experimental/RaycasterOptix/: 05.cu  CMakeLists.txt  Common.h  Main.cpp  optixPathTracer.cu  optixRaycastingKernels.cu  optixRaycastingKernels.h
Xitils/: Xitils.vcxproj  Xitils.vcxproj.filters
Xitils/include/: App.h  Geometry.h  ObjectStructure.h  Utils.h
